# YDR_Policy

./: .cursorignore  .gitignore  README.md  commit_log.md  main.py  pyproject.toml
.cursor/rules/: rules.mdc
app/back/chat/: agent.py  tools.py  utils.py
crawl/: README.md  config.py  crawler.py  crawler_state.py  main.py  postprocess.py  requirements.txt
crawl/processors/: document_processor.py  pdf_processor.py
data/crawled_data/: labeled_policies_data.csv  policies_data.csv
data/crawled_data/markdown_files/: full_depth_0_facintranet_policies.md  full_depth_1_accessibility.md  full_depth_1_calendar.md  full_depth_1_diagnosticradiology_quality-safety.md  full_depth_1_edu_residency-fellowships.md  full_depth_1_maps.md  full_depth_1_policies_coi.md  full_depth_1_policies_guidelines.md  full_depth_1_policies_timeaway.md  (+102 more)
data/processed/: scraped_policies_data.csv
data_collection/: config.py  logger.py  prompts.py
data_collection/crawl/: crawl.py  crawler.py  crawler_state.py
data_collection/scrape/: scrape.py  scraper.py
plans/: general_plan.md
test/: test_crawler.py  test_scraper.py
test/data_collection/: test_crawler.py  test_scraper.py
test_data/processed/: scraped_policies_data.csv
test_data/raw/: crawled_policies_data.csv
tests/backend/: test_database.py
tests/data_collection/: test_crawler.py  test_scraper.py
utils/: commit.py
ydrpolicy/: config.py
ydrpolicy/arhived/: main.py  requirements.txt
ydrpolicy/backend/: config.py  logger.py
ydrpolicy/data_collection/: config.py  logger.py
ydrpolicy/mcp_server/: add_policy.py
(+298 files in other folders)
