[project]
name = "ydr-policy-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx>=0.2.4",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "litellm>=1.63.11",
    "markdownify>=1.1.0",
    "mistralai>=1.5.1",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "selenium>=4.29.0",
]
